Added icons for wood and ice surface radio buttons
Made clear heat instant if sim is paused, otherwise sends a fire dog
Made it so the chart series controls and units labels don't overlap with the vertical text label on the slider.
Fixed: Chart series controls should be centered on the chart, not against the top of the chart (esp. if only one control); this will help improve layouts
Fix layout for ramp: work/energy tab, play area is unusable for some aspect ratios
Make sure all play areas are visible on the stage
Fixed: For charts with a single series, should have the text label above the text box and units to improve layout
Fixed: Velocity and position series controls shouldn't have checkboxes.
Added the wall force to the forces and motion series charts
Added spring graphics for bouncy walls
Improved ramp color for ice mode
Added a control for wall bounce independent of surface friction
Renamed "frictionless" control to "surface"
# 1.03.40 (34937) Sep 10, 2009
forces-and-motion: Removed gravity and wall force from chart 
Made it so when the user changes kinetic friction, that static is changed so that static >= kinetic
Made it so when the user changes static friction, that kinetic is changed so that static >= kinetic
Made sim have friction by default
moving-man: Added velocity and acceleration vectors
Fixed: Position slider is buggy after implementation of position smoothing
Fixed: Return object button doesn't work when using position smoothing
Improved the location of heat button
Improved the location of return object button
# 1.03.39 (34866) Sep 4, 2009
moving-man: removed extraneous control panels
Added correlation between chart domain axes
# 1.03.38 (34811) Sep 3, 2009
9/3/09 Fixes for missing string lookups
# 1.03.37 (34809) Sep 3, 2009
Removed robot moving company standalone sim (appears in last tab)
Made it so you can drag the man character in moving man
Fixed: Some play area control panels overlap depending on aspect ratio
# 1.03.36 (34763) Sep 3, 2009