@@ -1,3 +1,4 @@
+Added icicles to the frozen ramp graphics
 Added icons for wood and ice surface radio buttons
 Made clear heat instant if sim is paused, otherwise sends a fire dog
 Made it so the chart series controls and units labels don't overlap with the vertical text label on the slider.
